# veneto_cf_verifica_risoluzione_immagini_in_otter

./: README.md  main.py  prova.py  pyproject.toml  utils.py
images/output/personalized_downsizing_x2/: immagine_a_400.tif  immagine_a_600.tif
images/output/super_resolution_x2/: immagine_a_400.tif  immagine_a_600.tif
metadata/: metadati_immagine_a_400.json  metadati_immagine_a_600.json
model/SR_Script/: README.md  process_sr.py  pyproject.toml  requirements.txt  super_resolution.py  tiling_image_loader.py
src/: config.py  main.py  paths.py  utils.py
tests/: test_downscaling.py  test_super_resolution_x2.py
